refactor: adjustment for indents in blocks according to rule 3.5

--- a/style.css
+++ b/style.css
@@ -4,48 +4,61 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .eisenhower-matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .eisenhower-matrix img {
   width: 100%;
 }
+
 .eisenhower-matrix .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.eisenhower-matrix { text-align: center;
+
+  .eisenhower-matrix {
+    text-align: center;
+  }
+
 }
-}
+
 .main-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .new-task-wrapper {
   display: flex;
 }
+
 .list {
   margin:0;
   padding: 0px;
 }
+
 .list-item, .text-title {
   list-style:none;
 }
+
 .input-checkbox,
 .input-text,
-.btn{
+.btn {
   outline:none;
 }
+
 .btn {
   background: none;
   border: 0px;
@@ -55,9 +68,11 @@ body {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .btn:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .text-title,
 .new-task {
@@ -69,6 +84,7 @@ body {
   margin: 0;
   text-transform: uppercase;
 }
+
 .input-text {
   margin: 0;
   font-size: 18px;
@@ -81,6 +97,7 @@ body {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .input-text:focus {
   color: #333;
 }
@@ -90,6 +107,7 @@ body {
   display: block;
   margin: 0 0 20px;
 }
+
 #new-task {
   width: 318px;
 }
@@ -99,11 +117,11 @@ body {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .list-item > * {
   vertical-align: middle;
 }
@@ -111,20 +129,24 @@ body {
 .list-item > .input-checkbox {
   margin: 0 10px;
 }
+
 .list-item > .lbl {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .list-item >  .input-text {
   width: 226px
 }
+
 .delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .delete img:hover {
   transform: rotateZ(0);
 }
